[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "GeoProfileCore"
version = "0.1.0"
description = "A Python library for visualizing geotechnical profiles."
dependencies = [
    "plotly>=5, <=6",
    "Shapely>=1.8.0, <=1.9",
    "python-tsp>=0.4, <=0.5",
    "scikit-spatial>=7, <=8",
    "scipy >=1.10, <=2",
    "tqdm >=4.50, <=5",
]
requires-python = ">=3.9"
license = { file = "LICENSE.txt" }
readme = "README.md"
keywords = ["visualizing"]

[project.urls]
repository = "https://github.com/cemsbv/GeoProfileCore"

[project.optional-dependencies]
map = [
    "geopandas>=0.9.0, <0.20",
    "contextily>=1.1.0, <2",
    "matplotlib>=3.3.3, <4",
]
gef = ["pygef>=0.8"]
test = ["coveralls", "pytest"]
docs = [
    "ipython==8.21.0",
    "Sphinx==6.1.3",
    "sphinx-autodoc-typehints==1.22.0",
    "asteroid-sphinx-theme==0.0.3",
    "sphinx_rtd_theme==1.2.0",
    "m2r2==0.3.2",
]
lint = ["black", "isort"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
files = ["geoprofilecore"]
mypy_path = 'src'
namespace_packages = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
disallow_subclassing_any = true
no_implicit_optional = true
disallow_untyped_defs = true
strict_concatenate = true
disallow_any_generics = false
disallow_untyped_calls = true
warn_return_any = false
no_implicit_reexport = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "pytest.*",
    "setuptools.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests/*"]
disallow_untyped_defs = false
