[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "GeoProfile"
version = "0.3.0"
description = "A Python library for visualizing geotechnical profiles."
dependencies = [
    "plotly>=6.0.1,<7",
    "shapely>=2.1.0,<3",
    "python-tsp>=0.5.0,<0.6",
    "scikit-spatial>=9.0.1,<10",
    "scipy>=1.15.2,<2",
    "tqdm >=4.67.1,<5",
]
requires-python = ">=3.11"
license = { file = "LICENSE.txt" }
readme = "README.md"
keywords = ["visualizing"]

[project.urls]
repository = "https://github.com/cemsbv/GeoProfile"

[project.optional-dependencies]
map = [
    "geopandas>=1.0.1,<2",
    "contextily>=1.6.2,<2",
    "matplotlib>=3.10.1,<4",
]
gef = ["pygef>=0.11.1,<0.12"]
notebook = ["cems-nuclei[client]>=3.0.0,<4"]
test = [
    # coveralls is fixed to 3.3.1, because there is no support for python 3.13
    # in further versions
    "coveralls==3.3.1", 
    "pytest>=8.3.5,<9"
]
docs = [
    "Sphinx==8.2.3",
    "sphinx-autodoc-typehints==3.1.0",
    "ipython==9.1.0",
    "asteroid-sphinx-theme==0.0.3",
    "sphinx_rtd_theme==3.0.2",
    "m2r2>=0.3.4,<0.4",
]
lint = [
    "ansible-lint==25.1.3",
    "black==25.1.0",
    "cfn-lint==1.25.1",
    "cpplint==2.0.0",
    "flake8==7.1.2",
    "isort==6.0.0",
    "mypy==1.15.0",
    "sqlfluff==3.3.1",
    "yamllint==1.35.1",
    "yq==3.4.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
files = ["geoprofile"]
mypy_path = 'src'
namespace_packages = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
disallow_subclassing_any = true
no_implicit_optional = true
disallow_untyped_defs = true
strict_concatenate = true
disallow_any_generics = false
disallow_untyped_calls = true
warn_return_any = false
no_implicit_reexport = true
strict_equality = true
exclude = "tests"

[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "pytest.*",
    "setuptools.*",
    "matplotlib.*",
    "geopandas.*",
    "contextily.*",
    "skspatial.*",
    "shapely.*",
    "scipy.*",
    "python_tsp.*",
    "plotly.*",
    "pygef.*",
    "nuclei/*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests/*"]
disallow_untyped_defs = false
